--- a/Quiz.html
+++ b/Quiz.html
@@ -1,3 +1,17 @@
+<?php 
+  $questions = [
+    [
+      'text' => 'Question 1: What is the largest state of the United States?',
+      'answers' => [
+        'a' => 'Kansas',
+        'b' => 'Texas',
+        'c' => 'Alaska',
+        'd' => 'Iowa'
+      ],
+      'correctAnswer' => 'Alaska'
+    ]
+  ]
+?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -40,34 +54,36 @@
         <h1>Quiz</h1>
         <form action="Quiz.php" method="POST">
 
-          <p>Question 1: Example question?</p>
-          <div class="radio">
-            <label>
-              <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
-              a) Alternative a.
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-              b) Alternative b.
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
-              c) Alternative c.
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
-              d) Alternative d.
-            </label>
-          </div>
+          <?php foreach ($questions as $question) { ?>
+            <p><?php echo $question->text; ?></p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+                a) Alternative a.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                b) Alternative b.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
+                c) Alternative c.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
+                d) Alternative d.
+              </label>
+            </div>
+          <?php } ?>
 
           <button type="submit" class="btn btn-default">Submit Quiz</button>
-          
+
         </form>
       </div>
 
