--- a/Quiz.html
+++ b/Quiz.html
@@ -10,6 +10,16 @@
         'd' => 'Iowa'
       ],
       'correctAnswer' => 'Alaska'
+    ],[
+      'name' => 'question2',
+      'text' => 'Question 2: In what year was Google launched on the web?',
+      'answers' => [
+        'a' => '1996',
+        'b' => '1997',
+        'c' => '1998',
+        'd' => '1999'
+      ],
+      'correctAnswer' => '1998'
     ]
   ]
 ?>
