--- a/Quiz.html
+++ b/Quiz.html
@@ -12,7 +12,7 @@
       'correctAnswer' => 'Alaska'
     ],[
       'name' => 'question2',
-      'text' => 'Question 2: In what year was Google launched on the web?',
+      'text' => 'Question 2: In which year was Google launched on the web?',
       'answers' => [
         'a' => '1996',
         'b' => '1997',
