--- a/Quiz.html
+++ b/Quiz.html
@@ -1,28 +1,4 @@
-<?php 
-  $questions = [
-    [
-      'name' => 'question1',
-      'text' => 'Question 1: What is the largest state of the United States?',
-      'answers' => [
-        'a' => 'Kansas',
-        'b' => 'Texas',
-        'c' => 'Alaska',
-        'd' => 'Iowa'
-      ],
-      'correctAnswer' => 'Alaska'
-    ],[
-      'name' => 'question2',
-      'text' => 'Question 2: In which year was Google launched on the web?',
-      'answers' => [
-        'a' => '1996',
-        'b' => '1997',
-        'c' => '1998',
-        'd' => '1999'
-      ],
-      'correctAnswer' => '1998'
-    ]
-  ]
-?>
+<?php include 'questions.php'; ?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
