--- a/Quiz.html
+++ b/Quiz.html
@@ -30,6 +30,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="exercise1.php">Exercise 1</a></li>
             <li class="active"><a href="Quiz.html">Exercise 2</a></li>
+            <li><a href="customerFrontend.html">Exercise 3</a></li>
           </ul>
         </div>
       </div>
