--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="exercise1.php">Exercise 1</a></li>
             <li><a href="Quiz.html">Exercise 2</a></li>
+            <li><a href="customerFrontend.html">Exercise 3</a></li>
           </ul>
         </div>
       </div>
