--- a/customerFrontend.html
+++ b/customerFrontend.html
@@ -39,7 +39,7 @@
 
       <div>
         <h1>Web Store</h1>
-        <form action="customerBackend.php" method="POST">
+        <form action="customerBackend.php" method="POST" onsubmit="return validate()">
 
           <div class="row">
             <div class="col-lg-8">
@@ -121,10 +121,12 @@
               <button type="submit" class="btn btn-primary">Buy</button>
             </div>
           </div>
-          
+
         </form>
       </div>
 
     </div>
+
+    <script src="formChecker.js"></script>
   </body>
 </html>
