Validate for shipping method

--- a/customerFrontend.html
+++ b/customerFrontend.html
@@ -93,19 +93,19 @@
               <label>Shipping method:</label>
               <div class="radio">
                 <label>
-                  <input type="radio" name="shipping" value="free">
+                  <input type="radio" name="shipping" id="shipping-free" value="free">
                   Free 7 day
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" name="shipping" value="night">
+                  <input type="radio" name="shipping" id="shipping-night" value="night">
                   $50.00 over night
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" name="shipping" value="three-day">
+                  <input type="radio" name="shipping" id="shipping-three-day" value="three-day">
                   $5.00 three day
                 </label>
               </div>
